--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ tokenizers>=0.13.3
 transformers>=4.38.0
 huggingface-hub
 bitsandbytes @ git+https://github.com/TimDettmers/bitsandbytes
+matplotlib
